[html/css] Resolved footer bug.
Fixed bug that created a too long <p> element  crating a blank space
besides the page.

--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -129,6 +129,7 @@ header {
     position: relative;
     top: 30px;
     left: 50%;
+    width: 100px;
 }
 
 footer {
